Add Cognito authentication for Vapp
